--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,16 +3,19 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc.exe сборка активного файла",
-            "command": "C:\\mingw\\mingw64\\bin\\gcc.exe",
+            "command": "C:/dev/msys64/mingw64/bin/g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "-Wall",
+                "-Werror"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "C:/dev/msys64/mingw64/bin"
+            
             },
             "problemMatcher": [
                 "$gcc"
